# igaming-math-demo

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
compliance/: change_log.md
components/: README.md  audit.md  config.md  constraints.md  data_schema.md  metrics.md  optimizer.md  overview.md  paytable.md  simulator.md
configs/: var_only.yaml
docs/: QUICK_NOTE.md  info_geometry.md  methodology.md  one_pager.md
docs/business/: VALUE_NOTE.md
excel/: paytable_audit.xlsx
igsimplex/: cli.py  core.py  opt.py  test_kl_step.py  test_projection.py
igsimplex.egg-info/: SOURCES.txt  top_level.txt
notebooks/: ig_toy_slot.ipynb
tests/: test_metrics.py  test_projection.py
