[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "igsimplex"
version = "0.0.1"
description = "KL-bounded updates under RTP/Hit guardrails"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["numpy>=1.24", "pandas>=1.5", "matplotlib>=3.7"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["igsimplex*"]

# 若你有 igsimplex/cli.py，順便提供命令列
[project.scripts]
igsimplex = "igsimplex.cli:main"

